--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="store">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>ng-app</title>
+  <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
-	
+  {{ 1 + 2 }}
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
