--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<title>ng-app</title>
   <link rel="stylesheet" href="bootstrap.min.css">
 </head>
-<body>
+<body ng-cloak>
   <div ng-controller="StoreController as store">
     <h1>{{store.product.name}}</h1>
     <h2>${{store.product.price}}</h2>
